@@ -1,3 +1,10 @@
+2006-04-07  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/widgets/desktop-widget.cpp, src/widgets/icon.cpp,
+	  src/widgets/layer-selector.cpp:
+
+	  Added implementation of smaller icon size.
+
 2006-04-06  Jon A. Cruz  <jon@joncruz.org>
 
 	* src/color-profile.cpp, src/sp-image.cpp:
